@@ -59,11 +59,8 @@ function cms_module_Lang(&$modinstance)
 		return '';
 	}
 
-	if ($modinstance->curlang == '')
-	{
-		$modinstance->curlang = cms_current_language();
-	}
-	$ourlang = $modinstance->curlang;
+	$ourlang = cms_current_language();
+	if ($modinstance->curlang != '') $ourlang = $modinstance->curlang;
 
 	#Load the language if it's not loaded
 	if (!isset($modinstance->langhash[$ourlang]) || !is_array($modinstance->langhash[$ourlang]) || 
